<resources>
    <string name="app_name">Shop-E</string>
    <string name="title_name">White Shirt</string>
    <string name="backgroundColor">#006699</string>
    <string name="buy_now_button_text">Buy Now</string>
    <string name="add_to_cart_button_text">Add To Cart</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="description_text">Description</string>
    <string name="Options">Options</string>
    <string name="notSaved">Add to Wish List</string>
    <string name="saved">Added to Wish List</string>
    <string name="cart">Cart</string>
    <string name="buy">Buy</string>
    <string name="image_of_the_product_in_cart">Image of the product in cart</string>
    <string name="size">Size</string>
    <string name="S">S</string>
    <string name="M">M</string>
    <string name="L">L</string>
    <string name="XL">XL</string>
    <string name="XXL">XXL</string>
    <string name="view_cart">View Cart</string>
    <string name="item_added_to_cart">Item added to cart</string>
    <string name="image_of_product">image of the product</string>
    <string name="view_wish_list">View Wish List</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="total">Total</string>
    <string name="your_orders">Your Orders</string>
    <!--common resources -->
    <string name="temp_text">temp_text</string>

    <!--Start activity resources -->
    <string name="shop_tag">Home for Buyers</string>

    <!--dashboard resources-->

    <string name="key">keysfordash</string>

    <!-- names of directories in internal memory -->
    <string name="userData">userData</string>


    <string name="description_text_value">Here Comes the description of the product.

        The product is awesome, just buy it.Making the description long just to see the scroll view option is not good.

        Just buy the product already. You will love it.</string>
</resources>
